force-app/main/default/objects/Balance__c/fields/Blockchain__c.field-meta.xml
<CustomField>
    <fullName>Blockchain__c</fullName>
    <label>Blockchain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>