force-app/main/default/objects/Balance__c/fields/WalletAddress__c.field-meta.xml
<CustomField>
    <fullName>WalletAddress__c</fullName>
    <label>Wallet</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>WalletBalance</relationshipLabel>
    <relationshipName>WalletBalance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>